fixed CSS styling, added randomize and start button, added messageLog(), made playerTurn() more readable

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,22 +1,53 @@
+.main-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.randomize,
+.start {
+  cursor: pointer;
+}
 .game-proper {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-
-label {
+.message-log {
+  text-align: center;
+  margin-top: 0.5em;
+  border: 2px solid gray;
+  width: 20em;
+  padding: 1em 0 1em 0;
+}
+.mainboard {
   display: flex;
+}
+.player-wrapper {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-right: 1em;
+  margin-top: 1em;
+  border: 2px solid gray;
 }
-
+.enemy-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 1em;
+  margin-top: 1em;
+  border: 2px solid gray;
+}
 .row {
   display: flex;
-  height: 40px;
+  height: 35px;
 }
 .column {
-  width: 40px;
+  width: 35px;
   margin: 0.5px;
   border: 2px solid black;
   background: rgb(255, 255, 255);
@@ -28,7 +59,7 @@ label {
   );
 }
 .column:hover {
-  background: green;
+  border: 2px solid gold;
   cursor: pointer;
 }
 .carrier {
